[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-lighthouse"
version = "0.2.0"
description = "Audit tool for MCP servers — test protocol compliance, schema quality, and robustness"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Makito Chiba" }]
keywords = ["mcp", "model-context-protocol", "testing", "audit", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Topic :: Software Development :: Testing",
]
dependencies = ["rich>=13.0", "httpx>=0.27"]

[project.scripts]
mcp-lighthouse = "mcp_lighthouse.cli:main"
